--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,12 +7,12 @@ concurrency:
 
 on:
   push:
-    branches:
-      # choose your default branch
-      - master
-      - main
-    paths-ignore:
-      - '*.md'
+    paths:
+      - '**/*Provider.kt'
+  pull_request:
+    paths:
+      - '**/*Provider.kt'
+  workflow_dispatch:
 
 jobs:
   build:
